<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adgprogramador.madridtrips.NuevoViaje"
    android:id="@+id/fragmentNuevoViaje"
    android:background="@android:color/background_light">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonOk"
        android:background="@drawable/mybtn"
        android:text="@string/guardar"
        android:gravity="center"
        android:textColor="@android:color/background_light"
        android:padding="10dp"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewExitLs"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/Fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewFechaViaje"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/imageViewExitLs"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:paddingLeft="6dp"
        android:paddingEnd="3dp"
        android:paddingBottom="3dp"
        android:paddingRight="3dp"
        android:paddingStart="3dp"
        android:paddingTop="3dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextFecha"
        android:textSize="36sp"
        android:hint="dd/mm/AAAA"
        android:background="@android:color/background_light"
        android:layout_below="@+id/textViewFechaViaje"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="false"
        android:backgroundTint="@color/colorAccent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="6dp"
        android:paddingEnd="3dp"
        android:paddingBottom="3dp"
        android:paddingRight="3dp"
        android:paddingStart="3dp"
        android:paddingTop="3dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerMedios"
        android:padding="3dp"
        android:scrollbarSize="16dp"
        android:layout_below="@+id/textViewMedio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/colorAccent" />

    <TextView
        android:text="@string/importe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewImporte"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/spinnerMedios"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:paddingLeft="6dp"
        android:paddingEnd="3dp"
        android:paddingBottom="3dp"
        android:paddingRight="3dp"
        android:paddingStart="3dp"
        android:paddingTop="3dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextImporte"
        android:hint="€"
        android:textSize="36sp"
        android:layout_below="@+id/textViewImporte"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextFecha"
        android:layout_alignEnd="@+id/editTextFecha"
        android:enabled="false"
        android:background="@color/colorAccent"
        android:paddingLeft="6dp"
        android:paddingEnd="3dp"
        android:paddingBottom="3dp"
        android:paddingRight="3dp"
        android:paddingStart="3dp"
        android:paddingTop="3dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextKm"
        android:hint="Km's"
        android:textSize="36sp"
        android:layout_below="@+id/textViewKm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="false"
        android:background="@color/colorAccent"
        android:paddingLeft="6dp"
        android:paddingEnd="3dp"
        android:paddingBottom="3dp"
        android:paddingRight="3dp"
        android:paddingStart="3dp"
        android:paddingTop="3dp" />

    <TextView
        android:text="@string/km"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewKm"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/editTextImporte"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:paddingLeft="6dp"
        android:paddingEnd="3dp"
        android:paddingBottom="3dp"
        android:paddingRight="3dp"
        android:paddingStart="3dp"
        android:paddingTop="3dp" />

    <TextView
        android:text="@string/Medio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewMedio"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/editTextFecha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="6dp"
        android:paddingEnd="3dp"
        android:paddingBottom="3dp"
        android:paddingRight="3dp"
        android:paddingStart="3dp"
        android:paddingTop="3dp" />

    <!--<RadioGroup
        android:checkedButton="@+id/buttonVuelta"
        android:id="@+id/toggle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/myshape"
        android:orientation="horizontal"
        android:layout_below="@+id/imageViewKms"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp">

        <RadioButton
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:id="@+id/buttonIda"
            android:background="@drawable/myselector"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/ida"
            android:textColor="@android:color/black"
            android:textStyle="normal|bold"
            android:textSize="24sp" />

        <RadioButton
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:id="@+id/buttonVuelta"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/myselector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/vuelta"
            android:textColor="@android:color/black"
            android:textStyle="normal|bold"
            android:textSize="24sp" />
    </RadioGroup>-->

</RelativeLayout>
